# Brief-Engine-Web-app

./: .env  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  pipeline.py  run_demo.py
app/agents/: __init__.py  artifact_planner_agent.py  artifact_writer_agent.py  base.py  ceo_agent.py  editor_agent.py  outline_agent.py  profile_agent.py  quality_fixer_agent.py  research_agent.py  seo_agent.py  writer_agent.py
app/storage/: __init__.py  store.py
app/tools/: __init__.py  ai_visibility.py  keyword_tools.py  quality_guardrails.py  search_tools.py  seo_tools.py  writing_tools.py
docs/: go_to_market.md
examples/: sample_article.md  sample_output.json
outputs/: run_1772400862_ai_visibility.json  run_1772400862_article.schema.jsonld  run_1772400862_faq.schema.jsonld  run_1772400862_primary.md  run_1772400862_quality_report.json  run_1772400862_results.json  run_1772400862_seo_meta.json  run_1772400924_article.schema.jsonld  run_1772400924_faq.schema.jsonld  run_1772400924_primary.md  run_1772400924_quality_report.json  run_1772400924_results.json  run_1772400924_seo_meta.json  run_1772401592_ai_visibility.json  run_1772401592_article.schema.jsonld  run_1772401592_primary.md  run_1772401592_quality_report.json  run_1772401592_results.json  run_1772401592_seo_meta.json  run_1772401731_ai_visibility.json  run_1772401731_quality_report.json  run_1772401731_results.json  run_1772401731_seo_meta.json  run_1772401731_social_pack.md
storage/: briefengine.db
tests/: __init__.py  test_agents.py  test_pipeline.py  test_tools.py
(+13 files in other folders)
