[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "briefengine"
version = "0.1.0"
description = "AI Content Pipeline for SMBs — multi-agent SEO blog generation"
requires-python = ">=3.10"

# NOTE: We keep a requirements.txt for convenience, but many users install via
# `pip install -e .` (editable install). Without listing dependencies here,
# imports like `langchain_openai` will fail even though requirements.txt exists.
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.3.0",
  "openai>=1.50.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
